ajout du readme

--- a/css/style.less
+++ b/css/style.less
@@ -77,6 +77,11 @@ body {
         color:@grisClair;
       }
 
+      div.album-artiste {
+        border-top: 1px solid @grisClair;
+        border-bottom: 1px solid @grisClair;
+      }
+
       div.entete-artiste {
         h2.nom-artiste {
 
